css/style.css
/* ---------------------------------------------------
    NAVBAR
----------------------------------------------------- */

#sidebarCollapse {
    position: absolute;
    background-color:cadetblue;
}

/* ---------------------------------------------------
    HORIZONTAL SCROLLING NAV
----------------------------------------------------- */
::-webkit-scrollbar {
    display:none;
}

div.scrollmenu {
    overflow: auto;
    white-space: nowrap;
    border-top: solid 1px grey;
    border-bottom: solid 1px grey;
    margin: 5px 0 5px 0;
    padding: 5px 0 5px 0;
}

div.scrollmenu a {
    padding: 5px 14px 5px 14px;
}

/* ---------------------------------------------------
    SIDEBAR 
----------------------------------------------------- */

#sidebar {
    width: 250px;
    position: fixed;
    top: 0;
    left: -250px;
    height: 100vh;
    height: calc(var(--vh, 1vh) * 100);
    z-index: 999;
    background: #d7d7d7;
    color: #fff;
    transition: all 0.3s;
    overflow-y: scroll;
    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
}

#sidebar.active {
    left: 0;
}

#dismiss {
    width: 35px;
    height: 35px;
    position: absolute;
    /* top right corner of the sidebar */
    top: 10px;
    right: 10px;
}

.overlay {
    display: none;
    position: absolute;
    top: 0;
    width: 100vw;
    height: 100vh;
    height: calc(var(--vh, 1vh) * 100);
    background: rgba(0, 0, 0, 0.7);
    z-index: 998;
    opacity: 0;
    transition: all 0.5s ease-in-out;
}
.overlay.active {
    display: block;
    opacity: 1;
}

#sidebar .sidebar-header {
    padding: 20px;
    background: #6d7fcc;
}

#sidebar ul.components {
    margin-bottom: 0;
}

#sidebar ul p {
    color: #fff;
    background-color: cadetblue;
    padding: 10px;
    margin-bottom: 0;
}

#sidebar ul li a {
    padding: 10px;
    font-size: 1.1em;
    display: block;
}

#sidebar ul li a:hover {
    color: #7386D5;
    background: #c1c1c1;
}

#sidebar ul li.active>a,
a[aria-expanded="true"] {
    color: #fff;
    background: #9d9d9d;
}

a[data-toggle="collapse"] {
    position: relative;
}

.dropdown-toggle::after {
    display: block;
    position: absolute;
    top: 50%;
    right: 20px;
    transform: translateY(-50%);
}

ul ul a {
    font-size: 0.9em !important;
    padding-left: 30px !important;
    background: #6d7fcc;
}

ul.CTAs {
    padding: 20px;
}

ul.CTAs a {
    text-align: center;
    font-size: 0.9em !important;
    display: block;
    border-radius: 5px;
    margin-bottom: 5px;
}

a.download {
    background: #fff;
    color: #7386D5;
}

a.article,
a.article:hover {
    background: #9d9d9d !important;
    color: #fff !important;
}

/* ---------------------------------------------------
    BODY
----------------------------------------------------- */
html, body {
   margin:0;
   padding:0;
   height:100%;
}

.wrapper {
    min-height: 100%;
}

#carousel {
    padding: 0;
}

.carousel-item > img {
  max-width: 100%;
  max-height: 60vh;
  max-height: calc(var(--vh, 1vh) * 60);
  width: auto;
  height: auto;
  margin: 0 auto;
}


/* ---------------------------------------------------
    FOOTER
----------------------------------------------------- */

footer {
    height: 32vh;
    height: calc(var(--vh, 1vh) * 32);
    width: 100vw;
    position: absolute;
    bottom: 0;
    border: 2px solid white;
    border-top-width: 0;
}

footer > .container {
    position: absolute;
    bottom: 0;
    left: 50%;
    transform: translateX(-50%);
}

.feature {
    height: 16vh;
    height: calc(var(--vh, 1vh) * 16);
    width: 100%;    
    text-align: center;
    color: black;
    border: 1px solid white;
    border-top-width: 2px;
}

.feature > * {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);}

.feature > * > i {
    display: block;
    font-size: 5vh;
    font-size: calc(var(--vh, 1vh) * 5);
}

.feature > * > span {
    white-space: nowrap;
}

